# SIREN

./: .gitattributes  .gitignore  .gitmodules  BIASED_DECAY_DESIGN.md  CHANGELOG.md  CMakeLists.txt  DetectorVisuals.wl  INTERFACE_REDESIGN.md  PROJECT_LOG.md  README.md  RELEASE_NOTES  pyproject.toml  setup.py  setup.py.in
projects/crosssections/: CMakeLists.txt
projects/crosssections/private/: CrossSection.cxx  CrossSectionCollection.cxx  DISFromSpline.cxx  DarkNewsCrossSection.cxx  DarkNewsDecay.cxx  Decay.cxx  DipoleFromTable.cxx  DummyCrossSection.cxx  ElasticScattering.cxx  HNLDecay.cxx  HNLFromSpline.cxx  InteractionCollection.cxx  NeutrissimoDecay.cxx
projects/dataclasses/: CMakeLists.txt
projects/dataclasses/private/: DecayRecord.cxx  DecaySignature.cxx  InteractionRecord.cxx  InteractionSignature.cxx  InteractionTree.cxx  Particle.cxx  ParticleID.cxx  ParticleType.cxx  PhaseSpaceConvention.cxx  Process.cxx  VertexWeightingMode.cxx
projects/detector/: CMakeLists.txt
projects/detector/private/: AtomicMasses.cxx  Axis1D.cxx  CartesianAxis1D.cxx  CartesianAxisDensityDistribution.cxx  CartesianAxisExponentialDensityDistribution.cxx  CartesianAxisPolynomialDensityDistribution.cxx  ConstantDensityDistribution.cxx  ConstantDistribution1D.cxx  DensityDist.cxx  DensityDistribution.cxx  DensityDistribution1D.cxx  DetectorModel.cxx  Distribution1D.cxx  EarthModel.cxx  EarthModelCalculator.cxx  ExponentialDistribution1D.cxx  GDMLParser.cxx  MaterialModel.cxx  Path.cxx  PolynomialDistribution1D.cxx  RadialAxis1D.cxx  RadialAxisExponentialDensityDistribution.cxx  RadialAxisPolynomialDensityDistribution.cxx
projects/distributions/: CMakeLists.txt
projects/distributions/private/: ColumnDepthPositionDistribution.cxx  CylinderVolumePositionDistribution.cxx  DecayRangePositionDistribution.cxx  Distributions.cxx  OrientedCylinderPositionDistribution.cxx  PrimaryDirectionDistribution.cxx  PrimaryEnergyDistribution.cxx  PrimaryInjector.cxx  PrimaryNeutrinoHelicityDistribution.cxx  TargetMomentumDistribution.cxx  VertexPositionDistribution.cxx  pyPrimaryInjectionDistribution.cxx  pySecondaryInjectionDistribution.cxx  pyWeightableDistribution.cxx
projects/geometry/: CMakeLists.txt
projects/geometry/private/: BooleanGeometry.cxx  Box.cxx  Cone.cxx  Coordinates.cxx  CutTube.cxx  Cylinder.cxx  Ellipsoid.cxx  EllipticalTube.cxx  EulerAngles.cxx  ExtrPoly.cxx  GenericPolycone.cxx  Geometry.cxx  GeometryMacros.h  GeometryMesh.cxx  Matrix3D.cxx  MeshBuilder.cxx  Para.cxx  PhiUtils.h  Placement.cxx  Polycone.cxx  Polyhedra.cxx  Polynomial.cxx  Quaternion.cxx  Sphere.cxx  Torus.cxx  Trap.cxx  Trd.cxx  Vector3D.cxx
projects/injection/: CMakeLists.txt
projects/injection/private/: .InjectorBase.cxx.swp  ColumnDepthLeptonInjector.cxx  CylinderVolumeLeptonInjector.cxx  DecayRangeLeptonInjector.cxx  DetectorDirected2BodyChannel.cxx  DetectorDirected3BodyChannel.cxx  DetectorDirectedAngularSectorChannel.cxx  DetectorDirectedChannelUtils.h  DetectorDirectedScatteringChannel.cxx  Distributions.cxx  GeometryVolume.cxx  Injector.cxx  InjectorBase.cxx  InteractionRecordUtils.h  InteractionSelection.cxx  InteractionSelection.h  Isotropic2BodyChannel.cxx  LeptonInjector.cxx  LorentzBoostUtils.h  PhaseSpaceChannel.cxx  PhysicalChannelAdapters.cxx  Process.cxx  RangedLeptonInjector.cxx  TreeWeighter.cxx  TwoBodyKinematics.cxx  Weighter.cxx  WeightingUtils.cxx
projects/interactions/: CMakeLists.txt
projects/interactions/private/: CharmDISFromSpline.cxx  CharmHadronization.cxx  CharmMesonDecay.cxx  CharmMesonDecay3Body.cxx  CrossSection.cxx  DISFromSpline.cxx  DMesonELoss.cxx  DarkNewsCrossSection.cxx  DarkNewsDecay.cxx  Decay.cxx  DipoleFromTable.cxx  DummyCrossSection.cxx  ElasticScattering.cxx  ElectroweakDecay.cxx  HNLDISFromSpline.cxx  HNLDecay.cxx  HNLDipoleDISFromSpline.cxx  HNLDipoleDecay.cxx  HNLDipoleFromTable.cxx  HNLFromSpline.cxx  HNLTwoBodyDecay.cxx  Hadronization.cxx  InteractionCollection.cxx  MarleyCrossSection.cxx  NeutrissimoDecay.cxx  PythiaDISCrossSection.cxx  QuarkDISFromSpline.cxx  ScalarDecay.cxx  TrivialCrossSection.cxx  pyCrossSection.cxx  pyDarkNewsCrossSection.cxx  pyDarkNewsDecay.cxx  pyDecay.cxx
projects/io/: CMakeLists.txt
projects/io/private/: HepMC3Reader.cxx  HepMC3Writer.cxx
projects/math/: CMakeLists.txt
projects/math/private/: Coordinates.cxx  EulerAngles.cxx  Interpolation.cxx  (+4 more)
projects/processes/: CMakeLists.txt
projects/serialization/: CMakeLists.txt
projects/utilities/: CMakeLists.txt
tests/: Axis_TEST.cxx  CMakeLists.txt  CrossSection_TEST.cxx  DensityDistribution_TEST.cxx  Density_distribution_TEST.cxx  DipoleTable_TEST.cxx  Distribution_TEST.cxx  EarthModel_TEST.cxx  ElasticScattering_TEST.cxx  ExtrPoly_TEST.cxx  FakeEarthModel.h  FakeMaterialModel.h  Geometry_TEST.cxx  Injector_TEST.cxx  MaterialFake.h  MaterialModel_TEST.cxx  MathMethods_TEST.cxx  Path_TEST.cxx  Polynomial_TEST.cxx  Quaternion_TEST.cxx  Vector3D_TEST.cxx
tests/fixtures/: injector_physical_process_v1.siren_injector
tests/python/: conftest.py  test_authoring_bases.py  test_breakdown_invariant.py  test_chain_accumulation.py  test_channels_algebra.py  test_closure_gauge.py  test_constants.py  test_controller.py  test_controller_fixes.py  test_darknews_port.py  test_density_breakdown.py  test_detector_models.py  test_directed_regimes.py  test_directed_tiling.py  test_distributions_2d_flux.py  test_distributions_external.py  test_dk2nu.py  test_download.py  test_dutta_kim_chain.py  test_dutta_kim_golden.py  test_dutta_kim_models.py  test_earth_factorization.py  test_errors.py  test_example4_beam_samples.py  test_expand_wiring.py  test_failure_report.py  test_golden_regression.py  test_hepmc3_closure.py  test_hepmc3_combine.py  test_hepmc3_darknews.py  test_hepmc3_enabled.py  test_hepmc3_export.py  test_hepmc3_metadata.py  test_hepmc3_nuhepmc.py  test_hepmc3_weight_policy.py  test_hnl_decays.py  test_hnl_dis_classes.py  test_hnl_dis_splines_processes.py  test_importance_weights.py  test_injector_api.py  (+38 more)
tests/slow_rescaling/: smoke_quarkdis_100.py  smoke_quarkdis_10k.py
(+1179 files in other folders)
